Added basic HTML

--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,257 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Приложение PINK</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    Place here your code
+
+    <header class="page-header">
+        <a class="page-header__logo-mobile">
+            <img src="#" alt="Логотип PINK" class="page-header__logo-mobile-img logo-mobile-img">
+        </a>
+        <button class="page-header__toggle-button" type="button">Открыть меню</button>
+        <nav class="page-header__nav main-navigation">
+            <ul class="main-navigation__list">
+                <li class="main-navigation__item--mobile">
+                    <img src="#" alt="Логотип PINK" class="logo-mobile-img">
+                    <button class="main-navigation__close" type="button">Закрыть меню</button>
+                </li>
+                <li class="main-navigation__item">
+                    <a href="index.html" class="main-navigation__link">Главная</a>
+                </li>
+                <li class="main-navigation__item">
+                    <a href="photo.html" class="main-navigation__link">Фотографии</a>
+                </li>
+                <li class="main-navigation__item">
+                    <a href="form.html" class="main-navigation__link">Конкурс</a>
+                </li>
+                <li class="main-navigation__item">
+                    <a href="https://github.com/northlanee" class="main-navigation__link">northlanee</a>
+                </li>
+            </ul>
+        </nav>
+        <div class="page-header__content">
+            <img src="#" alt="Фотография iPhone" class="page-header__iphone-img">
+            <b class="page-header__tagline">Взгляните на жизнь иначе!</b>
+            <a href="#" class="page-header__download-button button">Скачать приложение</a>
+            <ul class="page-header__platforms-list">
+                <li class="page-header__platform">
+                    <img src="#" alt="Apple" class="page-header__platform-img">
+                </li>
+                <li class="page-header__platform">
+                    <img src="#" alt="Android" class="page-header__platform-img">
+                </li>
+                <li class="page-header__platform">
+                    <img src="#" alt="Windows" class="page-header__platform-img">
+                </li>
+            </ul>
+            <p class="page-header__text">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
+        </div>
+    </header>
+
+    <main class="page-main">
+
+        <h1 class="visually-hidden">Приложение "Pink"</h1>
+
+        <section class="info">
+
+            <h2 class="visually-hidden">Преимущества приложения</h2>
+
+            <p class="info__tagline--top">
+                Устали от серости мегаполиса?
+            </p>
+            <p class="info__tagline--bottom">
+                Нам есть, что вам предложить!
+            </p>
+            <ul class="info__advantages-list">
+                <li class="info__advantage">
+                    <b class="info__advantage-title">Поднимает настроение</b>
+                    <p class="info__advantage-text">
+                        Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!
+                    </p>
+                </li>
+                <li class="info__advantage">
+                    <b class="info__advantage-title">Меняет мир вокруг</b>
+                    <p class="info__advantage-text">
+                        Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект
+                    </p>
+                </li>
+                <li class="info__advantage">
+                    <b class="info__advantage-title">Заводит новых друзей</b>
+                    <p class="info__advantage-text">
+                        Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых
+                    </p>
+                </li>
+            </ul>
+            <ul class="info__image-list">
+                <li class="info__image-list-item">
+                    <img src="#" alt="Изображение со скриншотом" class="info__image">
+                </li>
+                <li class="info__image-list-item">
+                    <img src="#" alt="Изображение со скриншотом" class="info__image">
+                </li>
+                <li class="info__image-list-item--mobile">
+                    <img src="#" alt="Изображение со скриншотом" class="info__image">
+                </li>
+            </ul>
+            <div class="info__effect">
+                <img src="#" alt="Эффект на 24 часа" class="info__effect-image">
+                <div class="info__effect-description">
+                    <b class="info__effect-title">Эффект на 24 часа!</b>
+                    <p class="info__effect-text">
+                        Британские ученые провели исследования и доказали,
+                        что положительный эффект от использования приложения длится целые сутки!
+                    </p>
+                    <a href="#" class="info__effect-link">Узнать больше об исследовании</a>
+                </div>
+            </div>
+        </section>
+
+        <section class="reviews">
+
+            <h2 class="visually-hidden">Отзывы</h2>
+
+            <img src="#" alt="Кавычки" class="reviews__quote">
+            <ul class="reviews__list slider__list">
+                <li class="reviews__item slider__item">
+                    <b class="reviews__author">Николай Петров</b>
+                    <small class="reviews__author-info">25 лет, водитель трамвая</small>
+                    <p class="reviews__text">
+                        «Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»
+                    </p>
+                </li>
+                <li class="reviews__item slider__item">
+                    <b class="reviews__author">Николай Петров</b>
+                    <small class="reviews__author-info">25 лет, водитель трамвая</small>
+                    <p class="reviews__text">
+                        «Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»
+                    </p>
+                </li>
+                <li class="reviews__item slider__item">
+                    <b class="reviews__author">Николай Петров</b>
+                    <small class="reviews__author-info">25 лет, водитель трамвая</small>
+                    <p class="reviews__text">
+                        «Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»
+                    </p>
+                </li>
+            </ul>
+            <p class="reviews__arrows slider__arrows">
+                <button class="slider__prev" type="button">Предыдущий</button>
+                <button class="slider__next" type="button">Следующий</button>
+            </p>
+            <p class="reviews__toggles slider__toggles">
+                <button class="slider__toggle" type="button">1</button>
+                <button class="slider__toggle" type="button">2</button>
+                <button class="slider__toggle" type="button">3</button>
+            </p>
+
+        </section>
+
+        <section class="price">
+
+            <h2 class="visually-hidden">Цены</h2>
+
+            <table class="price__table">
+                <tr>
+                    <th class="price__empty-cell"></th>
+                    <th class="price__table-header">
+                        <h3 class="price__title">База</h3>
+                        <span class="price__pricing">1,99 USD</span>
+                    </th>
+                    <th class="price__table-header--hit">
+                        <h3 class="price__title">Стандарт</h3>
+                        <span class="price__pricing">3,99 USD</span>
+                    </th>
+                    <th class="price__table-header">
+                        <h3 class="price__title">Анлим</h3>
+                        <span class="price__pricing">9,99 USD</span>
+                    </th>
+                </tr>
+                <tr>
+                    <td class="price__table-cell">Розовый фильтр</td>
+                    <td class="price__table-cell"><span class="price__check--yes">Yes</span></td>
+                    <td class="price__table-cell"><span class="price__check--yes">Yes</span></td>
+                    <td class="price__table-cell"><span class="price__check--yes">Yes</span></td>
+                </tr>
+                <tr>
+                    <td class="price__table-cell">Смайлики</td>
+                    <td class="price__table-cell"><span class="price__check--no">No</span></td>
+                    <td class="price__table-cell"><span class="price__check--yes">Yes</span></td>
+                    <td class="price__table-cell"><span class="price__check--yes">Yes</span></td>
+                </tr>
+                <tr>
+                    <td class="price__table-cell">Комментарии</td>
+                    <td class="price__table-cell"><span class="price__check--no">No</span></td>
+                    <td class="price__table-cell"><span class="price__check--no">No</span></td>
+                    <td class="price__table-cell"><span class="price__check--yes">Yes</span></td>
+                </tr>
+            </table>
+
+            <p class="price__toggles slider__toggles">
+                <button class="slider__toggle" type="button">1</button>
+                <button class="slider__toggle" type="button">2</button>
+                <button class="slider__toggle" type="button">3</button>
+            </p>
+
+        </section>
+
+        <section class="contacts">
+
+            <h2 class="visually-hidden">Контакты</h2>
+
+            <b class="contacts__tagline">Остались вопросы? Свяжитесь с нами!</b>
+
+            <ul class="contacts__list">
+                <li class="contacts__item">
+                    <b class="contacts__title">Звоните:</b>
+                    <a href="#" class="contacts__link">+7 (812) 555-66-66</a>
+                </li>
+                <li class="contacts__item">
+                    <b class="contacts__title">Пишите:</b>
+                    <a href="#" class="contacts__link">mail@htmlacademy.ru</a>
+                </li>
+                <li class="contacts__item">
+                    <b class="contacts__title">Приезжайте в гости:</b>
+                    <a href="#" class="contacts__link">ул. Большая Конюшенная, 19/8</a>
+                </li>
+            </ul>
+
+            <div class="contacts__map">
+                <img src="#" alt="Карта проезда" class="contacts__map-img">
+                <img src="#" alt="Маркер нахождения" class="contacts__marker">
+            </div>
+
+        </section>
+
+    </main>
+
+    <footer class="page-footer">
+        <img src="#" alt="Большой логотип" class="page-footer__logo">
+        <ul class="page-footer__social social">
+            <li class="social__item">
+                <a href="#" class="social__link">
+                    <img src="#" alt="Twitter" class="social__img--twitter">
+                </a>
+            </li>
+            <li class="social__item">
+                <a href="#" class="social__link">
+                    <img src="#" alt="Facebook" class="social__img--facebook">
+                </a>
+            </li>
+            <li class="social__item">
+                <a href="#" class="social__link">
+                    <img src="#" alt="Youtube" class="social__img--youtube">
+                </a>
+            </li>
+        </ul>
+        <div class="page-footer__copyright">
+            <b class="page-footer__copyright-text">Разработано:</b>
+            <a href="https://github.com/northlanee" target="_blank" class="page-footer__copyright-link">
+                <img src="#" alt="northlanee" class="page-footer__copyright-img">
+            </a>
+        </div>
+    </footer>
+
 </body>
 </html>
